<resources>
    <string name="app_name">手机助手</string>
    <string name="app_update">应用更新</string>
    <string name="message_center">消息中心</string>
    <string name="setting">设置</string>
    <string name="search">搜索</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="recommend">推荐</string>
    <string name="ranking">排行</string>
    <string name="featured">精品</string>
    <string name="latest">最新</string>
    <string name="game">游戏</string>
    <string name="category">分类</string>
    <string name="try_now">立即体验</string>

    <string name="guide_1">全新改版</string>
    <string name="guide_2">视频购物</string>
    <string name="guide_3">评价晒图</string>

    <string name="error_unkown">未知错误,点击重新加载</string>
    <string name="error_http">网络连接错误,点击重新加载</string>
    <string name="error_system">服务器出错,点击重新加载</string>
    <string name="error_account_freeze">账户被冻结，请联系管理员</string>
    <string name="error_api_no_perission">调用了无权限的API接口</string>
    <string name="error_login">用户名或者密码错误</string>
    <string name="error_http_400">bad request</string>
    <string name="error_http_404">服务器资源找不到</string>
    <string name="error_http_500">服务器错误</string>
    <string name="error_socket_timeout">网络超时,点击重新加载</string>
    <string name="error_socket_unreachable">网络不可用</string>
    <string name="error_token">登录失效，请重新登录</string>
    <string name="loading">加载中...</string>
    <string name="default_loading">loading</string>
    <string name="empty_data">暂无数据</string>

    <string name="hot_game">热门游戏</string>
    <string name="hot_top">热门主题</string>
    <string name="hot_app">热门应用</string>

    <string name="mobi">请输入手机号</string>
    <string name="password">请输入密码</string>
    <string name="login">登陆</string>
    <string name="unlogin">未登陆</string>

    <string name="app_uninstall">应用卸载</string>
    <string name="download_manager">下载管理</string>
    <string name="apps_update">应用更新</string>
    <string name="sys_setting">系统设置</string>
    <string name="logining">正在登陆...</string>
    <string name="logout">退出登录</string>
    <string name="download">下载</string>
    <string name="app_describe">应用描述</string>
    <string name="app_relate">相关应用</string>
    <string name="app_developer">相同应用开发者</string>
    <string name="app_size">相同大小</string>
    <string name="latest_version">最新版本</string>
    <string name="update_time">更新时间</string>
    <string name="information">详细信息</string>
    <string name="developer">开发者</string>
    <string name="author">Howie_chen</string>
    <string name="install">安装</string>
    <string name="smart_install">智能安装</string>
    <string name="failed">失败</string>
    <string name="search_hint">搜索</string>
    <string name="manage">管理</string>
    <string name="accessibility_service_description">智能安装，无需人工操作</string>
    <string name="key_auto_check_apk_update">key_auto_check_apk_update</string>
    <string name="key_smart_install">key_smart_install</string>
    <string name="key_auto_delete_apk">key_auto_delete_apk</string>
    <string name="key_root_install">key_root_install</string>
    <string name="key_clear_cache">key_clear_cache</string>
    <string name="key_apk_download_dir">key_apk_download_dir</string>
    <string name="key_about_me">key_about_me</string>
</resources>
