<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_20"
        android:paddingTop="@dimen/dp_20">

        <ImageView
            android:id="@+id/img_icon_app"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center|top" />

        <TextView
            android:id="@+id/text_app"
            style="@style/Text_Title_Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:elevation="5dp"
            android:textColor="@color/white" />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:paddingBottom="@dimen/dp_10"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/view_gallery_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/dp_15">

        <TextView
            style="@style/Text_Title_Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_describe" />

        <com.ms.square.android.expandabletextview.ExpandableTextView
            android:id="@+id/view_introduction_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/white"
            app:animDuration="200"
            app:maxCollapsedLines="4">

            <TextView
                android:id="@+id/expandable_text"
                style="@style/Text_Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14" />

            <ImageButton
                android:id="@+id/expand_collapse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:background="@android:color/transparent"
                android:padding="@dimen/dp_15" />

        </com.ms.square.android.expandabletextview.ExpandableTextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/white"
        android:padding="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text_Title_Large"
            android:text="@string/information"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text_Content"
                android:text="@string/update_time"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txt_update_time_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text_Content_grey_800"
                android:layout_weight="2"
                android:text="2017.0.1"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text_Content"
                android:text="@string/latest_version"
                android:layout_weight="1"
                />


            <TextView
                android:id="@+id/txt_version_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text_Content_grey_800"
                android:layout_weight="2"
                android:text="20"
                />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text_Content"
                android:text="@string/app_size"
                android:layout_weight="1"
                />


            <TextView
                android:id="@+id/txt_apk_size_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text_Content_grey_800"
                android:layout_weight="2"
                android:text="20 mb"
                />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text_Content"
                android:text="@string/developer"
                android:layout_weight="1"
                />


            <TextView
                android:id="@+id/txt_publisher_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text_Content_grey_800"
                android:layout_weight="2"
                android:text="@string/author"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/white"
        android:padding="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text_Title_Large"
            android:text="@string/app_developer"
            />

        <TextView
            android:id="@+id/txt_publisher2_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text_Content"
            android:text="@string/app_developer"
            />



        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_same_dev_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:scrollbars="none"
            android:scrollbarStyle="outsideOverlay"
            android:clipToPadding="false"
            android:elevation="1dp" />





    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/white"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text_Title_Large"
            android:text="@string/app_relate"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_relate_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:scrollbars="none"
            android:scrollbarStyle="outsideOverlay"
            android:clipToPadding="false"
            android:elevation="1dp" />



    </LinearLayout>


</LinearLayout>